Fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -389,6 +389,7 @@ h4{
   font-size: 16px;
   transition: 0.4s;
   box-sizing: border-box;
+  line-height: 16px;
 }
 
 .accordion:hover {
